--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <script src="./animals.js"> </script>
     <script src="./app.js"></script>
     <script>
-        renderGroup('faculty');
-        renderGroup('room');
+       drawGroupsAll();
+       doIt();
     </script>
     
     
