--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://d3js.org/d3.v5.js"></script>
     <!-- <script src="./data.js"></script> -->
     <script src="./groups.js"></script>
-    <script src="./animals.js"> </script>
+    <script src="./ppl.js"> </script>
     <script src="./app.js"></script>
     <script>
        drawGroupsAll();
