Refactoring. Bugs with single/multiple group and group json file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     <!-- <script src="./data.js"></script> -->
     <script src="./groups.js"></script>
     <script src="./ppl.js"> </script>
-    <script src="./app.js"></script>
+   
+    <!-- Initialization settings for SVG -->
+    <script src="./js/init.js"></script>
+
+    <script src="./js/controller/contr.js"></script>
+    <script src="./js/view/view.js"></script>
+
     <script>
        drawGroupsAll();
        doIt();
