--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     <script src="./js/view/view.js"></script>
 
     <script>
-       drawGroupsAll();
-       doIt();
+    //    drawGroupsAll();
+    //    drawPanel();
+    //    doIt();
     </script>
     
     
