--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <svg></svg>
+    <svg id="panel-1"></svg>
     <script src="https://d3js.org/d3.v5.js"></script>
     <!-- <script src="./data.js"></script> -->
     <script src="./groups.js"></script>
@@ -20,9 +21,7 @@
     <script src="./js/view/view.js"></script>
 
     <script>
-    //    drawGroupsAll();
-    //    drawPanel();
-    //    doIt();
+   
     </script>
     
     
