--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <script src="./js/controller/contr.js"></script>
     <script src="./js/view/view.js"></script>
+    <script src="./js/view/panel.js"></script>
 
     <script>
    
